--- a/csv-to-html-table/index.html
+++ b/csv-to-html-table/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>CSV to HTML Table</title>
-    <meta name="author" content="Derek Eder">
-    <meta content="Display any CSV file as a searchable, filterable, pretty HTML table" />
+    <title>Host Platforms and Languages</title>
+    <meta name="author" content="Alexandre B A Villares">
+    <meta content="Resources for teaching programming" />
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -23,11 +23,9 @@
   <body>
     <div class="container-fluid">
 
-      <h2>CSV to HTML Table</h2>
 
-      <p>Display any CSV file as a searchable, filterable, pretty HTML table. Done in 100% JavaScript. <a href='https://github.com/derekeder/csv-to-html-table'>Code on GitHub</a>.</p>
+      <p>Text</p>
 
-      <p>Here's a table of Health Clinics from the <a href='https://data.cityofchicago.org/browse?q=health%20clinic&sortBy=relevance&utf8=%E2%9C%93'>City of Chicago Data Portal</a>.</p>
       
       <div id='table-container'></div>
 
@@ -60,7 +58,7 @@
       }
 
       CsvToHtmlTable.init({
-        csv_path: 'data/Health Clinics in Chicago.csv',
+        csv_path: 'https://raw.githubusercontent.com/villares/Resources-for-teaching-programming/master/I%20-%20Host%20platforms%20%26%20languages.csv',
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
