--- a/csv-to-html-table/index.html
+++ b/csv-to-html-table/index.html
@@ -52,7 +52,7 @@
     <script type="text/javascript">
       function format_link(link){
         if (link)
-          return "<a href='" + link + "' target='_blank'>" + link + "</a>";
+          return "<a href='http://" + link + "' target='_blank'>" + link + "</a>";
         else
           return "";
       }
