--- a/csv-to-html-table/host-platforms-and-languages.html
+++ b/csv-to-html-table/host-platforms-and-languages.html
@@ -22,17 +22,12 @@
 
   <body>
     <div class="container-fluid">
-<article class="markdown-body entry-content" itemprop="text"><h2><a id="user-content-resources-for-teaching-programming-for-artists-designers-and-architects" class="anchor" href="#resources-for-teaching-programming-for-artists-designers-and-architects" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Resources for teaching programming for artists, designers and architects</h2>
-<ul>
-<li>The tables on a better looking format:
-<a href="https://docs.google.com/spreadsheets/d/1zXnO8fMvNyfBeddSDhuq_ymcMrSKFYuf3pjzynkoD5w/pubhtml">https://docs.google.com/spreadsheets/d/1zXnO8fMvNyfBeddSDhuq_ymcMrSKFYuf3pjzynkoD5w/pubhtml</a></li>
-</ul>
+<article class="markdown-body entry-content" itemprop="text">
+  <h2>Resources for teaching programming for artists, designers and architects</h2>
+  <h3>Host platforms &ampersand; languages</h3>
 <p><strong>Please consider feedback and/or a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HCGAKACDMVNV2">small donation</a>!</strong></p>
 <p>The original Portuguese-language version:
 <a href="https://github.com/villares/Recursos-para-o-ensino-de-programacao">https://github.com/villares/Recursos-para-o-ensino-de-programacao</a></p>
-<p>Copyright (c) 2014-2017 Alexandre B A Villares (<a href="https://github.com/villares">github.com/villares</a>)<br>
-This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License<br>
-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-NC-SA-4.0 License</a></p>
 </article>
       
       <div id='table-container'></div>
@@ -41,6 +36,11 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
 
     <footer class='footer'>
       <div class='container-fluid'>
+        <hr />
+        <p>Copyright (c) 2014-2017 Alexandre B A Villares (<a href="https://github.com/villares">github.com/villares</a>)<br>
+This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License<br>
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-NC-SA-4.0 License</a></p>
+
         <hr />
         <p class='pull-right'><a href='https://github.com/derekeder/csv-to-html-table'>CSV to HTML Table</a> by <a href='http://derekeder.com'>Derek Eder</a></p>
       </div>
