--- a/csv-to-html-table/books-and-references.html
+++ b/csv-to-html-table/books-and-references.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Host Platforms and Languages</title>
+    <title>Resources for teaching programming - Books and references</title>
     <meta name="author" content="Alexandre B A Villares">
     <meta content="Resources for teaching programming" />
 
@@ -24,7 +24,7 @@
     <div class="container-fluid">
 <article class="markdown-body entry-content" itemprop="text">
   <h2>Resources for teaching programming for artists, designers and architects</h2>
-  <h3>Host platforms &ampersand; languages</h3>
+  <h3>Books &ampersand; referencess</h3>
 <p><strong>Please consider feedback and/or a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HCGAKACDMVNV2">small donation</a>!</strong></p>
 <p>The original Portuguese-language version:
 <a href="https://github.com/villares/Recursos-para-o-ensino-de-programacao">https://github.com/villares/Recursos-para-o-ensino-de-programacao</a></p>
