--- a/csv-to-html-table/host-platforms-and-languages.html
+++ b/csv-to-html-table/host-platforms-and-languages.html
@@ -24,10 +24,9 @@
     <div class="container-fluid">
 <article class="markdown-body entry-content" itemprop="text">
   <h2>Resources for teaching programming for artists, designers and architects</h2>
-  <h3>Host platforms &ampersand; languages</h3>
+  <h3>Host platforms and languages</h3>
 <p><strong>Please consider feedback and/or a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HCGAKACDMVNV2">small donation</a>!</strong></p>
-<p>The original Portuguese-language version:
-<a href="https://github.com/villares/Recursos-para-o-ensino-de-programacao">https://github.com/villares/Recursos-para-o-ensino-de-programacao</a></p>
+<p>CSV tables on GitHub: <a href="https://github.com/villares/Resources-for-teaching-programming">English</a> <a href="https://github.com/villares/Recursos-para-o-ensino-de-programacao">Portuguese</a></p>
 </article>
       
       <div id='table-container'></div>
