--- a/csv-to-html-table/books-and-references.html
+++ b/csv-to-html-table/books-and-references.html
@@ -25,9 +25,9 @@
 <article class="markdown-body entry-content" itemprop="text">
   <h2>Resources for teaching programming for artists, designers and architects</h2>
   <h3>Books and references</h3>
-<p><strong>Please consider feedback and/or a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HCGAKACDMVNV2">small donation</a>!</strong></p>
 <p>CSV tables on GitHub: <a href="https://github.com/villares/Resources-for-teaching-programming">English</a> <a href="https://github.com/villares/Recursos-para-o-ensino-de-programacao">Portuguese</a></p>
-</article>
+<p><strong>Please consider feedback and/or a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HCGAKACDMVNV2">small donation</a>!</strong></p>
+      </article>
       
       <div id='table-container'></div>
 
@@ -59,6 +59,7 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
     <script type="text/javascript">
       function format_link(link){
         if (link)
+          link = link.replace(/ *\([^)]*\) */g, "");
           return "<a href='http://" + link + "' target='_blank'>" + link + "</a>";
         else
           return "";
@@ -70,7 +71,7 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
         datatables_options: {"paging": false},
-        custom_formatting: [[7, format_link]]
+        custom_formatting: [[8, format_link]]
       });
     </script>
   </body>
