--- a/csv-to-html-table/books-and-references.html
+++ b/csv-to-html-table/books-and-references.html
@@ -57,9 +57,9 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
 
 
     <script type="text/javascript">
-      function format_link(link){
-        if (link)
-          link = link.replace(/ *\([^)]*\) */g, "");
+      function format_link(linkText){
+        if (linkText)
+          link = linkText.replace(/ *\([^)]*\) */g, "");
           return "<a href='http://" + link + "' target='_blank'>" + link + "</a>";
         else
           return "";
