--- a/csv-to-html-table/books-and-references.html
+++ b/csv-to-html-table/books-and-references.html
@@ -59,8 +59,8 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
     <script type="text/javascript">
       function format_link(linkText){
         if (linkText)
-          link = linkText.replace(/ *\([^)]*\) */g, "");
-          return "<a href='http://" + link + "' target='_blank'>" + link + "</a>";
+          //link = linkText.replace(/ *\([^)]*\) */g, "");
+          return "<a href='http://" + linkText + "' target='_blank'>" + linkText + "</a>";
         else
           return "";
       }
