--- a/csv-to-html-table/books-and-references.html
+++ b/csv-to-html-table/books-and-references.html
@@ -58,11 +58,12 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
 
     <script type="text/javascript">
       function format_link(linkText){
-        if (linkText)
-          //link = linkText.replace(/ *\([^)]*\) */g, "");
+        if (linkText) {
+          linkText = linkText.replace(/ *\([^)]*\) */g, "");
           return "<a href='http://" + linkText + "' target='_blank'>" + linkText + "</a>";
-        else
+        } else {
           return "";
+        }
       }
 
       CsvToHtmlTable.init({
