--- a/csv-to-html-table/books-and-references.html
+++ b/csv-to-html-table/books-and-references.html
@@ -59,7 +59,7 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
     <script type="text/javascript">
       function format_link(linkText){
         if (linkText) {
-          linkText = linkText.replace(/ *\([^)]*\) */g, "");
+          //linkText = linkText.replace(/ *\([^)]*\) */g, "");
           return "<a href='http://" + linkText + "' target='_blank'>" + linkText + "</a>";
         } else {
           return "";
