--- a/testing/index.html
+++ b/testing/index.html
@@ -80,13 +80,15 @@ function onShowSource(event) {
     <div id="source_container" style="display:none">
       <textarea id="diagram_source" rows="15" cols ="75">
 
-Alice->Beto: Oi Beto, how are you?;
-Note right of Beto: Beto pensa;
-Beto-->Alice: Tudo bem...;
-Beto-->Carlos: Huh?;
-Alice->Carlos: Sai daqui!;
-Carlos->Beto: what?;
-Note right of Carlos: Carlos leaves the room;
+
+Alice -] Beto: Oi Beto, how are you?
+Note right of Beto: Beto pensa
+Beto --] Alice: Tudo bem...
+Beto --]Carlos: Huh?
+Alice -] Carlos: Sai daqui!
+Carlos -] Beto: what?
+Note right of Carlos: Carlos leaves the room
+
 
 </textarea>
       <br/>
