--- a/testing/index.html
+++ b/testing/index.html
@@ -1,12 +1,8 @@
 
-<script src="{{ bower directory }}/bower-webfontloader/webfont.js" />
-<script src="{{ bower directory }}/snap.svg/dist/snap.svg-min.js" />
-<script src="{{ bower directory }}/underscore/underscore-min.js" />
-<script src="{{ bower directory }}/js-sequence-diagrams/dist/sequence-diagram-min.js" />
-
-
-
-<script src="{{ bower directory }}/jquery/dist/jquery.min.js" />
+     <script src="http://yastatic.net/raphael/2.1.0/raphael.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sequence-diagrams/1.0.4/sequence-diagram-min.js"></script>
+<script src="https://code.jquery.com/" />
 <div class="diagram">
 Alice -> Beto: Oi Beto, how are you?
 Note right of Beto: Beto pensa
