--- a/csv-to-html-table/books-and-references.html
+++ b/csv-to-html-table/books-and-references.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Resources for teaching programming - Books and references</title>
+    <title>Host Platforms and Languages</title>
     <meta name="author" content="Alexandre B A Villares">
-    <meta content="Resources for teaching programming" />
+    <meta content="Resources for Teaching Programming" />
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -23,11 +23,11 @@
   <body>
     <div class="container-fluid">
 <article class="markdown-body entry-content" itemprop="text">
-  <h2>Resources for teaching programming for artists, designers and architects</h2>
-  <h3>Books and references</h3>
-<p>CSV tables on GitHub: <a href="https://github.com/villares/Resources-for-teaching-programming">English</a> <a href="https://github.com/villares/Recursos-para-o-ensino-de-programacao">Portuguese</a></p>
+  <h2>Resources for Teaching Programming for Artists, Designers and Architects</h2>
+  <h3>Host Platforms & Languages</h3>
+<p><a href="https://github.com/villares/Resources-for-teaching-programming">CSV tables on GitHub</a></p>
 <p><strong>Please consider feedback and/or a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HCGAKACDMVNV2">small donation</a>!</strong></p>
-      </article>
+</article>
       
       <div id='table-container'></div>
 
