--- a/csv-to-html-table/glossario-meios-digitais.html
+++ b/csv-to-html-table/glossario-meios-digitais.html
@@ -35,7 +35,7 @@
     <footer class='footer'>
       <div class='container-fluid'>
         <hr />
-        <p>Copyright (c) 2020 Escola da Cidade (<a href="https://github.com/villares">github.com/villares</a>)<br>
+        <p>Copyright (c) 2020 Escola da Cidade<br>
 This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License<br>
 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-NC-SA-4.0 License</a></p>
 
