--- a/csv-to-html-table/glossario-meios-digitais.html
+++ b/csv-to-html-table/glossario-meios-digitais.html
@@ -69,7 +69,7 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAl
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
         datatables_options: {"paging": false},
-        custom_formatting: [[4, format_link]]
+        custom_formatting: [[4, format_link], [5, format_link]]
       });
     </script>
   </body>
