--- a/selected-work/pcd-porto-2021/index.html
+++ b/selected-work/pcd-porto-2021/index.html
@@ -82,7 +82,7 @@ def setup():
     rectMode(CENTER)
     colorMode(HSB)
     noSmooth()
-    grid = Cell(0, 0, width  - 128, height -  - 128, 8, 8, deep=True)
+    grid = Cell(0, 0, width  - 128, height - 128, 8, 8, deep=True)
 
 def draw():
     global f
