--- a/selected-work/recursive-grid/index.html
+++ b/selected-work/recursive-grid/index.html
@@ -65,8 +65,7 @@
       </div>
 
       <p style="font-family: 'sans'; font-size:18px"><br>
-        <b>Grade recursiva PCD Porto 2021</b>, by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> was created for PCD Porto 2021 exhibition,
-        but it is also part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode.
+        <b>Grade recursiva 2021</b>, by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> is part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode.
         </p>
     </div>
   </body>
