--- a/selected-work/recursive-grid/index.html
+++ b/selected-work/recursive-grid/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grade recursiva PCD Porto 2021 - Alexandre B A Villares</title>
+    <title>Grade recursiva 2021 - Alexandre B A Villares</title>
     <style> body, html, canvas {padding: 0; margin: 0; overflow: hidden;} </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/default.min.css">
