--- a/selected-work/recursive-grid/index.html
+++ b/selected-work/recursive-grid/index.html
@@ -28,10 +28,10 @@
         html {
           overflow-y: scroll;
           overflow-x: scroll;
-
+          background-color: black;
         }
 
-        .demoContainer {
+        .demoContainer, body {
           display: flex;
           align-items: center;
           justify-content: center;
@@ -58,16 +58,16 @@
             <input disabled id="executeBtn" class="btn rounded py1 px2 mb1" type="submit" value="Execute">
             <input id="clearBtn" class="btn rounded py1 px2 mb1" type="submit" value="Clear">
           </div> -->
-      </div class="demoContainer">
+      <div class="demoContainer">
 
       <div id="sketch-holder" >
         <!-- You sketch will go here! -->
-      </div>
-
-      <p style="font-family: 'sans'; font-size:18px"><br>
-        <b>Grade recursiva 2021-01-21 </b>, by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> is part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode.
-        </p>
+      </div>     
     </div>
+
+ <p style="font-family: 'sans'; font-size:18px; color:white"><br>
+        <b>Grade recursiva 2021-01-21 </b> by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> is part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode. Presented at the  <a href="https://pcd.encontrosdigitais.com.br/galeria/">Processsing Community Day Brasil 2021 Exhibition</a>
+        </p>
   </body>
   <script type="text/javascript">
 
